@@ -20,6 +20,6 @@
 
 CAMLprim value unix_error_message(value err)
 {
-  int errnum = code_of_unix_error(err);
+  int errnum = unix_code_of_unix_error(err);
   return caml_copy_string(strerror(errnum));
 }
