@@ -31,8 +31,8 @@
 #include <netdb.h>
 #endif
 
-extern int socket_domain_table[]; /* from socket.c */
-extern int socket_type_table[];   /* from socket.c */
+extern int unix_socket_domain_table[]; /* from socket.c */
+extern int unix_socket_type_table[];   /* from socket.c */
 
 static value convert_addrinfo(struct addrinfo * a)
 {
@@ -44,11 +44,13 @@ static value convert_addrinfo(struct addrinfo * a)
   len = a->ai_addrlen;
   if (len > sizeof(sa)) len = sizeof(sa);
   memcpy(&sa.s_gen, a->ai_addr, len);
-  vaddr = alloc_sockaddr(&sa, len, -1);
+  vaddr = unix_alloc_sockaddr(&sa, len, -1);
   vcanonname = caml_copy_string(a->ai_canonname == NULL ? "" : a->ai_canonname);
   vres = caml_alloc_small(5, 0);
-  Field(vres, 0) = cst_to_constr(a->ai_family, socket_domain_table, 3, 0);
-  Field(vres, 1) = cst_to_constr(a->ai_socktype, socket_type_table, 4, 0);
+  Field(vres, 0) =
+    unix_cst_to_constr(a->ai_family, unix_socket_domain_table, 3, 0);
+  Field(vres, 1) =
+    unix_cst_to_constr(a->ai_socktype, unix_socket_type_table, 4, 0);
   Field(vres, 2) = Val_int(a->ai_protocol);
   Field(vres, 3) = vaddr;
   Field(vres, 4) = vcanonname;
@@ -87,10 +89,10 @@ CAMLprim value unix_getaddrinfo(value vnode, value vserv, value vopts)
     if (Is_block(v))
       switch (Tag_val(v)) {
       case 0:                   /* AI_FAMILY of socket_domain */
-        hints.ai_family = socket_domain_table[Int_val(Field(v, 0))];
+        hints.ai_family = unix_socket_domain_table[Int_val(Field(v, 0))];
         break;
       case 1:                   /* AI_SOCKTYPE of socket_type */
-        hints.ai_socktype = socket_type_table[Int_val(Field(v, 0))];
+        hints.ai_socktype = unix_socket_type_table[Int_val(Field(v, 0))];
         break;
       case 2:                   /* AI_PROTOCOL of int */
         hints.ai_protocol = Int_val(Field(v, 0));
